2020-06-29    <moller@mollerware.com>

	* aplwrap.c (key_press_event): Fixed Up/Down key command history.
	
2020-06-2    <moller@mollerware.com>

	* txtbuf.c (tagged_insert): Replaced deprecated ...beep()
	* pstat.c (get_pstat): Replace sprintf() to too-small fixed buffer
	with asprintf().
	* options.[ch]: Added options to set foreground/background
	colours.  Also added an option to pass a -L workspace load to apl.

2014-10-19  David B. Lamkins  <david@lamkins.net>

	* aplio.c (apl_read_err): Add 100us sleep to reduce the likelihood
	of APLwrap failing to recognize a prompt. See explanation in the
	code comments.

2014-10-18  David B. Lamkins  <david@lamkins.net>

	* pstat.c (show_pstat): Create Pstat window under mouse pointer.

2014-10-17  David B. Lamkins  <david@lamkins.net>

	* menu.h: Support explicit creation of a new file editor, rather
	than having to go through export followed by import. Remove export
	commands.

	* edit.h: Support explicit creation of a new file editor, rather
	than having to go through export followed by import. Remove export
	commands.

	* menu.c (set_filename, new_file, build_menubar): Support explicit
	creation of a new file editor, rather than having to go through
	export followed by import. Remove export commands.

	* edit.c (edit_save_file, edit_delete_real, build_edit_menubar)
	(edit_object, edit_file): Support explicit creation of a new file
	editor, rather than having to go through export followed by
	import. Remove export commands.

2014-10-16  David B. Lamkins  <david@lamkins.net>

	* options.h: Add --shortcuts command-line option.

	* menu.h: Add --shortcuts command-line option.

	* options.c: Add --shortcuts command-line option.

	* menu.c (init_shortcuts): Add --shortcuts command-line option.

	* aplwrap.c (main): Add --shortcuts command-line option.

	* complete.c: Improve completion function's wraparound logic. Fix
	completion function's origin-dependence.
