@@ -1,12 +1,18 @@
 2020-06-29    <moller@mollerware.com>
 
 	* aplwrap.c (key_press_event): Fixed Up/Down key command history.
+	(load_css_provider): New fcn to allow fg/bg settings to change the
+	css provider.
 	
+	* menu.c (settings_cb): Added foreground/background settings.
+
 2020-06-2    <moller@mollerware.com>
 
 	* txtbuf.c (tagged_insert): Replaced deprecated ...beep()
+	
 	* pstat.c (get_pstat): Replace sprintf() to too-small fixed buffer
 	with asprintf().
+	
 	* options.[ch]: Added options to set foreground/background
 	colours.  Also added an option to pass a -L workspace load to apl.
 
